tests/type-errors/asset_multi_key_invalid_type.arl
archetype asset_multi_key_invalid_type

asset my_asset identified by i s {
  i : nat;
  s : bls12_381_fr;
  v : bool;
}
